# vectara-hallucination-api

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  test_app.py
