[tool.poetry]
name = "vectara-inference-api"
version = "0.1.0"
description = "Flask API for Vectara model inference"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = { version = "2.2.2", source = "torch-cpu" }
flask = {version = "^3.0.3", extras = ["async"]}
transformers = "^4.44.0"
peft = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
