[tool.poetry]
name = "vectara-inference-api"
version = "0.1.0"
description = "Flask API for Vectara model inference"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.0+cpu"
torchvision = "^0.11.0+cpu"
flask = {version = "^2.0.0", extras = ["async"]}
transformers = "^4.18.0"
peft = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
