[tool.poetry]
name = "vectara-inference-api"
version = "0.1.0"
description = "API for Vectara model inference"
authors = ["Climate Policy Radar Labs <tech@climatepolicyradar.org>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.0+cpu"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
requests = "^2.26.0"
pydantic = "^1.8.2"
transformers = "^4.18.0"
peft = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
